--- a/.github/workflows/main_azllamabazbot.yml
+++ b/.github/workflows/main_azllamabazbot.yml
@@ -14,36 +14,50 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # Required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Set up Python version
+      - name: Install System Dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y libsystemd-dev libparted-dev pkg-config
+
+      - name: Set Up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      - name: Create and start virtual environment
+      - name: Create and Activate Virtual Environment
         run: |
           python -m venv venv
           source venv/bin/activate
-      
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Upgrade Pip and Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --no-cache-dir -r requirements.txt
 
-      - name: Upload artifact for deployment jobs
+      - name: Run Tests (if applicable)
+        run: |
+          source venv/bin/activate
+          pytest || echo "Tests failed, but continuing deployment..."
+
+      - name: Zip Artifact for Deployment
+        run: |
+          zip -r release.zip . \
+            -x "venv/*" \
+            -x "__pycache__/*" \
+            -x ".git/*" \
+            -x "release.zip"
+
+      - name: Upload Artifact for Deployment Jobs
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: |
-            release.zip
-            !venv/
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,19 +66,18 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write # Required for requesting the JWT
+      contents: read # Required for actions/checkout
 
     steps:
-      - name: Download artifact from build job
+      - name: Download Artifact from Build Job
         uses: actions/download-artifact@v4
         with:
           name: python-app
 
-      - name: Unzip artifact for deployment
+      - name: Unzip Artifact for Deployment
         run: unzip release.zip
 
-      
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -72,10 +85,12 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_6C6418B7B32D4DCEACD90303EAE7431A }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A434F40BBA5E4CB59BA7BB94B7EE0159 }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'azllamabazbot'
           slot-name: 'Production'
-          
+
+      - name: Cleanup
+        run: rm -f release.zip
