--- a/.github/workflows/main_azllamabazbot.yml
+++ b/.github/workflows/main_azllamabazbot.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python app to Azure Web App - azllamabazbot
 
 on:
@@ -14,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # Required for actions/checkout
+      contents: read
 
     steps:
       - name: Checkout Code
@@ -23,7 +19,7 @@ jobs:
       - name: Install System Dependencies
         run: |
           sudo apt update
-          sudo apt install -y libsystemd-dev libparted-dev pkg-config
+          sudo apt install -y ufw libsystemd-dev libparted-dev pkg-config
 
       - name: Set Up Python
         uses: actions/setup-python@v5
@@ -40,11 +36,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install --no-cache-dir -r requirements.txt
 
-      - name: Run Tests (if applicable)
-        run: |
-          source venv/bin/activate
-          pytest || echo "Tests failed, but continuing deployment..."
-
       - name: Zip Artifact for Deployment
         run: |
           zip -r release.zip . \
@@ -53,7 +44,7 @@ jobs:
             -x ".git/*" \
             -x "release.zip"
 
-      - name: Upload Artifact for Deployment Jobs
+      - name: Upload Artifact for Deployment
         uses: actions/upload-artifact@v4
         with:
           name: python-app
@@ -66,8 +57,8 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write # Required for requesting the JWT
-      contents: read # Required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download Artifact from Build Job
