--- a/.github/workflows/main_azllamabazbot.yml
+++ b/.github/workflows/main_azllamabazbot.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --no-cache-dir -r requirements.txt
+          pip install --no-cache-dir uvicorn gunicorn
 
       - name: Zip Artifact for Deployment
         run: |
